maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: ':' expected but ')' found.
def quitterMur(sommeAngle) = {
                         ^Escaper:79: error: identifier expected but '}' found.
}
^